Scrollbar Fixes

--- a/neocities/everythingisgoingtobeok.css
+++ b/neocities/everythingisgoingtobeok.css
@@ -244,12 +244,6 @@
             }
             
             /* ===== Scrollbar CSS ===== */
-  
-              /* Firefox */
-              * {
-                scrollbar-width: thin;
-                scrollbar-color: black black;
-              }
             
               /* Chrome, Edge, and Safari */
               *::-webkit-scrollbar {
